--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,6 @@
 ---
-  - import_playbook:
-  - import_playbook:
-  - import_playbook:
-  - import_playbook:
+  - import_playbook: install_backend.yml
+  - import_playbook: install_frontend.yml
+  - import_playbook: deploy_fronted.yml
+  - import_playbook: deploy_backend.yml
+  - import_playbook: install_load_balancer.yml
