actualizar los archivos

--- a/install_load_balancer.yml
+++ b/install_load_balancer.yml
@@ -70,6 +70,11 @@
 
 #--------------------------------------------------------
 
+  - name: Eliminamos los archivos clonados innecesarios.
+    file:
+      path: /etc/apache2/sites-available/000-default.conf
+
+
   - name: Clonamos el repositorio
     git:
       repo: https://github.com/Daniel-Magana512/repositorio8.git
@@ -77,21 +82,21 @@
 
   - name: Movemos los archivos de configuración a /etc/apache2/sites-availeble
     copy:
-      src: /tmp/archivos/conf/*
+      src: /tmp/archivos/conf/000-default.conf
       dest: /etc/apache2/sites-available/
       remote_src: yes
 
   - name: Cambiamos el contenido del archivo 000-default-le-ssl.conf
     ansible.builtin.replace:
-      path: /etc/apache2/sites-available/000-default-le-ssl.conf
+      path: /etc/apache2/sites-available/000-default.conf
       regexp: IP_HTTP_SERVER_1
       replace: "{{IP_HTTP_SERVER_1}}"
 
   - name: Cambiamos el contenido del archivo 000-default.conf
     ansible.builtin.replace:
       path: /etc/apache2/sites-available/000-default.conf
-      regexp: IP_HTTP_SERVER_1
-      replace: "{{IP_HTTP_SERVER_1}}"
+      regexp: IP_HTTP_SERVER_2
+      replace: "{{IP_HTTP_SERVER_2}}"
 
   - name: Eliminamos los archivos clonados innecesarios.
     file:
