--- a/main.yml
+++ b/main.yml
@@ -4,3 +4,4 @@
   - import_playbook: deploy_fronted.yml
   - import_playbook: deploy_backend.yml
   - import_playbook: install_load_balancer.yml
+  - import_playbook: install_cerbot.yml
