--- a/variables.yml
+++ b/variables.yml
@@ -4,6 +4,9 @@ DB_NAME: db_name
 DB_USER: db_user
 DB_PASS: db_pass
 
+DOMAIN: practicadmplocal.ddns.net
+PS_EMAIL: chema512@gmail.com
+
 
 IP_HTTP_SERVER_1: 52.202.237.39
 IP_HTTP_SERVER_2: 44.212.227.221
