actualizar la organización

--- a/main.yml
+++ b/main.yml
@@ -1,7 +1,7 @@
 ---
-  - import_playbook: install_backend.yml
-  - import_playbook: install_frontend.yml
-  - import_playbook: deploy_fronted.yml
-  - import_playbook: deploy_backend.yml
-  - import_playbook: install_load_balancer.yml
-  - import_playbook: install_cerbot.yml
+  - import_playbook: playbooks/install_backend.yml
+  - import_playbook: playbooks/install_frontend.yml
+  - import_playbook: playbooks/deploy_fronted.yml
+  - import_playbook: playbooks/deploy_backend.yml
+  - import_playbook: playbooks/install_load_balancer.yml
+  - import_playbook: playbooks/install_cerbot.yml
