--- a/playbooks/install_frontend.yml
+++ b/playbooks/install_frontend.yml
@@ -7,7 +7,7 @@
 
   - name: Añadimos las variables
     ansible.builtin.include_vars:
-      ./variables.yml
+      ../vars/variables.yml
 
   - name: Actualizar los repositorios
     apt:
