--- a/playbooks/install_load_balancer.yml
+++ b/playbooks/install_load_balancer.yml
@@ -7,7 +7,7 @@
 
   - name: Añadimos las variables
     ansible.builtin.include_vars:
-      ./variables.yml
+      ../vars/variables.yml
 
   - name: Actualizar los repositorios
     apt:
@@ -90,13 +90,13 @@
     ansible.builtin.replace:
       path: /etc/apache2/sites-available/000-default.conf
       regexp: IP_HTTP_SERVER_1
-      replace: "{{IP_HTTP_SERVER_1}}"
+      replace: "{{ IP_HTTP_SERVER_1 }}"
 
   - name: Cambiamos el contenido del archivo 000-default.conf
     ansible.builtin.replace:
       path: /etc/apache2/sites-available/000-default.conf
       regexp: IP_HTTP_SERVER_2
-      replace: "{{IP_HTTP_SERVER_2}}"
+      replace: "{{ IP_HTTP_SERVER_2 }}"
 
   - name: Eliminamos los archivos clonados innecesarios.
     file:
