--- a/playbooks/deploy_backend.yml
+++ b/playbooks/deploy_backend.yml
@@ -7,7 +7,7 @@
 
     - name: Añadimos las variables
       ansible.builtin.include_vars:
-        ./variables.yml
+        ../vars/variables.yml
 
     - name: Borramos el archivo en caso de que exista
       ansible.builtin.file:
