--- a/vars/variables.yml
+++ b/vars/variables.yml
@@ -1,12 +1,12 @@
 ---
-DB_HOST_PRIVATE_IP: 172.31.65.147
+DB_HOST_PRIVATE_IP: 172.31.76.12
 DB_NAME: db_name
 DB_USER: db_user
 DB_PASS: db_pass
 
-IP_HTTP_SERVER_1: 172.31.11.39
-IP_HTTP_SERVER_2: 172.31.11.9
-DOMAIN: practica8funcionar.ddns.net
+IP_HTTP_SERVER_1: 172.31.66.234
+IP_HTTP_SERVER_2: 172.31.70.128
+DOMAIN: balanceadordmp.ddns.net
 PS_EMAIL: prueba51229asir@gmail.com
 
 
